태그, 카테고리 예외처리와 soft삭제기능 구현